--- a/anonPoster/Properties/Resources.resx
+++ b/anonPoster/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="graceOfGod" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\graceOfGod.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="newYearHat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\newYearHat.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
